email verifiy otp integrated and testing done
